[gd_scene load_steps=14 format=3 uid="uid://ba7beql7xcpd8"]

[ext_resource type="Script" path="res://GameScript.gd" id="1_d11f1"]
[ext_resource type="Texture2D" uid="uid://uwd616mp13d8" path="res://Silly Pictures/Better_black_box.png" id="2_4hym6"]
[ext_resource type="Texture2D" uid="uid://b8n62alqc601x" path="res://Silly Pictures/MouseRed.png" id="3_4pcwk"]
[ext_resource type="Texture2D" uid="uid://bneukfkibamhy" path="res://Silly Pictures/ColorBox/RedBox.png" id="4_amnsg"]
[ext_resource type="Texture2D" uid="uid://hxcqwfpmmgcg" path="res://Silly Pictures/ColorBox/GreenBox.png" id="5_ene22"]
[ext_resource type="Texture2D" uid="uid://c8kf5vgiw7rt7" path="res://Silly Pictures/ColorBox/BlueBox.png" id="6_6yws7"]
[ext_resource type="Texture2D" uid="uid://duqwd1ixt2oin" path="res://Silly Pictures/ColorBox/YellowBox.png" id="7_poj7f"]
[ext_resource type="Texture2D" uid="uid://oc6a8iwslfl8" path="res://Silly Pictures/PixelArt/loterryWheel.png" id="8_o0km6"]

[sub_resource type="GDScript" id="GDScript_r5fyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_307ia"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgy75"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnvpr"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goggw"]
size = Vector2(64, 64)

[node name="GameTreeRoot" type="Node2D"]
script = ExtResource("1_d11f1")

[node name="LotteryWheel" type="Node2D" parent="."]
position = Vector2(80, 80)
scale = Vector2(2, 2)

[node name="WheelTimer" type="Timer" parent="LotteryWheel"]
wait_time = 3600.0
one_shot = true
autostart = true

[node name="WheelSprite" type="Sprite2D" parent="LotteryWheel"]
texture = ExtResource("8_o0km6")

[node name="WheelButton" type="Button" parent="LotteryWheel"]
modulate = Color(1, 1, 1, 0)
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0

[node name="ColorPicker" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(512, 488)
scale = Vector2(1.5, 1.5)

[node name="RedButton" type="Button" parent="ColorPicker"]
offset_left = -96.0
offset_top = -64.0

[node name="Red" type="Sprite2D" parent="ColorPicker/RedButton"]
position = Vector2(48, 32)
scale = Vector2(1.5, 1)
texture = ExtResource("4_amnsg")

[node name="GreenButton" type="Button" parent="ColorPicker"]
offset_left = -96.0
offset_bottom = 64.0

[node name="Green" type="Sprite2D" parent="ColorPicker/GreenButton"]
position = Vector2(48, 32)
scale = Vector2(1.5, 1)
texture = ExtResource("5_ene22")

[node name="BlueButton" type="Button" parent="ColorPicker"]
offset_right = 96.0
offset_bottom = 64.0

[node name="Blue" type="Sprite2D" parent="ColorPicker/BlueButton"]
position = Vector2(48, 32)
scale = Vector2(1.5, 1)
texture = ExtResource("6_6yws7")

[node name="YellowButton" type="Button" parent="ColorPicker"]
offset_top = -64.0
offset_right = 96.0

[node name="Yellow" type="Sprite2D" parent="ColorPicker/YellowButton"]
position = Vector2(48, 32)
scale = Vector2(1.5, 1)
texture = ExtResource("7_poj7f")

[node name="Shop" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_r5fyd")

[node name="TabSelector" type="TabContainer" parent="Shop"]
layout_mode = 0
offset_left = 688.0
offset_top = 24.0
offset_right = 1129.0
offset_bottom = 624.0
tab_alignment = 1
drag_to_rearrange_enabled = true
tabs_rearrange_group = 0

[node name="Attractions" type="BoxContainer" parent="Shop/TabSelector"]
layout_mode = 2
vertical = true

[node name="LotteryWheel" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Lottery Wheel
"

[node name="LotteryWheelAmount" type="Label" parent="Shop/TabSelector/Attractions/LotteryWheel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = -8.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="LotteryWheelCost" type="Label" parent="Shop/TabSelector/Attractions/LotteryWheel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 112.0
offset_bottom = 11.5
grow_vertical = 2

[node name="LotteryBooth" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Lottery Booth"

[node name="LotteryBoothAmount" type="Label" parent="Shop/TabSelector/Attractions/LotteryBooth"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = -8.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="LotteryBoothCost" type="Label" parent="Shop/TabSelector/Attractions/LotteryBooth"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 112.0
offset_bottom = 14.5
grow_vertical = 2

[node name="CarnivalGames" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Carnival Games"

[node name="CarnivalGamesAmount" type="Label" parent="Shop/TabSelector/Attractions/CarnivalGames"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -12.5
offset_right = -16.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2

[node name="CarnivalGamesCost" type="Label" parent="Shop/TabSelector/Attractions/CarnivalGames"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.5
offset_right = 96.0
offset_bottom = 13.5
grow_vertical = 2

[node name="CottonCandyBooth" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Cotton Candy Booth"

[node name="CottonCandyBoothCost" type="Label" parent="Shop/TabSelector/Attractions/CottonCandyBooth"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="CottonCandyBoothAmount" type="Label" parent="Shop/TabSelector/Attractions/CottonCandyBooth"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Funfair" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Funfair"

[node name="FunfairCost" type="Label" parent="Shop/TabSelector/Attractions/Funfair"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="FunfairAmount" type="Label" parent="Shop/TabSelector/Attractions/Funfair"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="AmusementPark" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Amusement Park"

[node name="AmousementParkCost" type="Label" parent="Shop/TabSelector/Attractions/AmusementPark"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="AmousementParkAmount" type="Label" parent="Shop/TabSelector/Attractions/AmusementPark"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="AmusementCity" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Amusement City"

[node name="AmusementCityCost" type="Label" parent="Shop/TabSelector/Attractions/AmusementCity"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="AmusementCityAmount" type="Label" parent="Shop/TabSelector/Attractions/AmusementCity"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="AmusementNation" type="Button" parent="Shop/TabSelector/Attractions"]
layout_mode = 2
text = "Amusement Nation
"

[node name="AmusementNationCost" type="Label" parent="Shop/TabSelector/Attractions/AmusementNation"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="AmusementNationAmount" type="Label" parent="Shop/TabSelector/Attractions/AmusementNation"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Uppgrades" type="BoxContainer" parent="Shop/TabSelector"]
visible = false
layout_mode = 2
vertical = true

[node name="ClickUppgrade" type="Button" parent="Shop/TabSelector/Uppgrades"]
layout_mode = 2
text = "Spin Wheel Uppdrade"

[node name="ClickUppgradeCost" type="Label" parent="Shop/TabSelector/Uppgrades/ClickUppgrade"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_vertical = 2

[node name="Color Shop" type="BoxContainer" parent="Shop/TabSelector"]
visible = false
layout_mode = 2
alignment = 1
vertical = true

[node name="Label" type="Label" parent="Shop/TabSelector/Color Shop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Coming Soon!"

[node name="Ascend Shop" type="BoxContainer" parent="Shop/TabSelector"]
visible = false
layout_mode = 2

[node name="ClickerManager" type="Node2D" parent="."]

[node name="Button" type="Button" parent="ClickerManager"]
offset_left = 352.0
offset_top = 592.0
offset_right = 512.0
offset_bottom = 623.0
size_flags_horizontal = 4
text = "Clear the function "

[node name="Money" type="Label" parent="ClickerManager"]
offset_left = 25.0
offset_top = 224.0
offset_right = 344.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 27
text = "1000 Tickets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPS" type="Label" parent="ClickerManager"]
offset_left = 104.0
offset_top = 264.0
offset_right = 263.0
offset_bottom = 290.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "This is your TPS WXY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="The Areas" type="Node2D" parent="ClickerManager"]
position = Vector2(184, 464)
scale = Vector2(2.5, 2.5)

[node name="Sprite2D" type="Sprite2D" parent="ClickerManager/The Areas"]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(0, -1.52588e-05)
scale = Vector2(2, 2)
texture = ExtResource("2_4hym6")

[node name="Area VU" type="Area2D" parent="ClickerManager/The Areas"]
position = Vector2(-32, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickerManager/The Areas/Area VU"]
shape = SubResource("RectangleShape2D_307ia")

[node name="Area HU" type="Area2D" parent="ClickerManager/The Areas"]
position = Vector2(32, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickerManager/The Areas/Area HU"]
shape = SubResource("RectangleShape2D_vgy75")

[node name="Area VN" type="Area2D" parent="ClickerManager/The Areas"]
position = Vector2(-32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickerManager/The Areas/Area VN"]
shape = SubResource("RectangleShape2D_nnvpr")

[node name="Area HN" type="Area2D" parent="ClickerManager/The Areas"]
position = Vector2(32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickerManager/The Areas/Area HN"]
position = Vector2(0, 1.52588e-05)
shape = SubResource("RectangleShape2D_goggw")

[node name="ColorSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.866667)
top_level = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4pcwk")

[node name="ColorTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 320)

[connection signal="timeout" from="LotteryWheel/WheelTimer" to="." method="_on_wheel_timer_timeout"]
[connection signal="pressed" from="LotteryWheel/WheelButton" to="." method="_on_wheel_button_pressed"]
[connection signal="pressed" from="ColorPicker/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="ColorPicker/GreenButton" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="ColorPicker/BlueButton" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="ColorPicker/YellowButton" to="." method="_on_yellow_button_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/LotteryWheel" to="." method="_on_lottery_wheel_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/LotteryBooth" to="." method="_on_lottery_booth_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/CarnivalGames" to="." method="_on_carnival_games_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/CottonCandyBooth" to="." method="_on_cotton_candy_booth_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/Funfair" to="." method="_on_funfair_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/AmusementPark" to="." method="_on_amusement_park_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/AmusementCity" to="." method="_on_amusement_city_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Attractions/AmusementNation" to="." method="_on_amusement_nation_pressed"]
[connection signal="pressed" from="Shop/TabSelector/Uppgrades/ClickUppgrade" to="." method="_on_click_uppgrade_pressed"]
[connection signal="pressed" from="ClickerManager/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ClickerManager/The Areas/Area VU" to="." method="_on_area_vu_mouse_entered"]
[connection signal="mouse_entered" from="ClickerManager/The Areas/Area HU" to="." method="_on_area_hu_mouse_entered"]
[connection signal="mouse_entered" from="ClickerManager/The Areas/Area VN" to="." method="_on_area_vn_mouse_entered"]
[connection signal="mouse_entered" from="ClickerManager/The Areas/Area HN" to="." method="_on_area_hn_mouse_entered"]
[connection signal="timeout" from="ColorTimer" to="." method="_on_color_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
